# NextGen_Hydra

./: .gitignore  README.md  pyproject.toml  vercel.json
apps/: __init__.py
apps/api/: __init__.py  artifacts.py  main.py
apps/web/: .env.example  index.html  package-lock.json  package.json
apps/web/src/: App.jsx  styles.css
configs/: defaults.yaml  site_crosswalk.yaml  sites.yaml  streamflow_units.yaml
docs/: current_artifact_status.md  future_external_inputs.md  goal_contract.md  implementation_plan.md  product_classifier_policy.md  public_api_file_contracts.md  safety_constraints.md  streamflow_units_evidence.md  vpu_mapping_evidence.md
src/nextgen_hydra/: __init__.py  backfill.py  classifier.py  cli.py  config.py  crosswalk.py  discovery.py  download.py  future.py  inventory.py  manifest.py  provenance.py  qc.py  resources.py  schema_inspection.py  schemas.py  site_directory.py  tidy.py  units.py
src/nextgen_hydra/io/: s3.py
tests/: conftest.py  test_backfill.py  test_classifier.py  test_cli.py  test_config.py  test_crosswalk.py  test_discovery.py  test_download.py  test_manifest.py  test_public_api.py  test_resources.py  test_s3.py  test_schema_inspection.py  test_site_directory.py  test_tidy_qc.py
